--- a/Pizzeria/Pizzeria.csproj
+++ b/Pizzeria/Pizzeria.csproj
@@ -201,6 +201,8 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="category.txt" />
+    <Content Include="Content\bootstrap-lumen.css" />
+    <Content Include="Content\bootstrap-lumen.min.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="favicon.ico" />
