--- a/Pizzeria/Pizzeria.csproj
+++ b/Pizzeria/Pizzeria.csproj
@@ -194,8 +194,10 @@
     <Compile Include="Models\Mongo\Models\OrderedDish.cs" />
     <Compile Include="Models\Mongo\Models\Supplement.cs" />
     <Compile Include="Models\Mongo\MongoDBDataProvider.cs" />
+    <Compile Include="Models\ViewModels\CartEntryViewModel.cs" />
     <Compile Include="Models\ViewModels\HomeViewModel.cs" />
     <Compile Include="Models\ViewModels\ManagementViewModel.cs" />
+    <Compile Include="Models\ViewModels\OrderFormViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
@@ -213,6 +215,7 @@
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
+    <Content Include="Scripts\cart.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
     <None Include="Scripts\jquery.validate-vsdoc.js" />
