--- a/Pizzeria/Pizzeria.csproj
+++ b/Pizzeria/Pizzeria.csproj
@@ -190,8 +190,10 @@
     <Compile Include="Models\Mongo\Models\Category.cs" />
     <Compile Include="Models\Mongo\Models\Deliverer.cs" />
     <Compile Include="Models\Mongo\Models\Dish.cs" />
+    <Compile Include="Models\Mongo\Models\District.cs" />
     <Compile Include="Models\Mongo\Models\Order.cs" />
     <Compile Include="Models\Mongo\Models\OrderedDish.cs" />
+    <Compile Include="Models\Mongo\Models\Restaurant.cs" />
     <Compile Include="Models\Mongo\Models\Supplement.cs" />
     <Compile Include="Models\Mongo\MongoDBDataProvider.cs" />
     <Compile Include="Models\ViewModels\CartEntryViewModel.cs" />
@@ -207,6 +209,7 @@
     <Content Include="Content\bootstrap-lumen.min.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="districts.txt" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
